syntax = "proto3";

package sfc_scheme;

import "Models/Common/pagination.proto";
import "Models/Common/sorting.proto";
import "Messages/Find/Filters/get_schemes_filter.proto";

option csharp_namespace = "SFC.Scheme.Contracts.Messages.Find";

message GetSchemesRequest
{
    Pagination pagination = 1;
    repeated Sorting sorting = 2;
    GetSchemesFilter filter = 3;
}