syntax = "proto3";

package sfc_scheme;

import "Models/Scheme/scheme.proto";

option csharp_namespace = "SFC.Scheme.Contracts.Messages.Find";

message GetSchemesResponse
{
    repeated Scheme items = 1;
}